--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ com<!DOCTYPE html>
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>Credit - Loan &amp; Credit Company HTML Template</title>
+    <title>Star Spark | About us</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.png">
@@ -146,9 +146,9 @@ com<!DOCTYPE html>
                             <p>Take look at our</p>
                             <h2>About our company</h2>
                         </div>
-                        <h6 class="mb-4">In vitae nisi aliquam, scelerisque leo a, volutpat sem. Viva mus rutrum dui fermentum eros hendrerit, id lobortis leo volutpat. </h6>
-                        <p class="mb-0">Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Duis non volutpat arcu. Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Duis non volutpat arcu. Pellentesque lobortis neque non sem dapibus, non rutrum dolor pretium.</p>
-                        <a href="#" class="btn credit-btn mt-50">Discover</a>
+                        <h6 class="mb-4">Star Spark is a team of financial experts to help you make your right financial decisions. We believe in transparency in planning and efficiency in our process. </h6>
+                        <p class="mb-0">Star Spark IMF Private Limited or more fondly known as Star Spark is one of India’s main financial company. It was founded with the objective of helping people to accomplish financial goals and is head1quartered in Hajaribagh, Jharkhand, India. We offer financial services and BFSI to all the customers. Our network of is spread across all India.</p>
+                        <a href="contact.html" class="btn credit-btn mt-50">Contact Us</a>
                     </div>
                 </div>
                 <div class="col-12 col-md-6">
@@ -168,10 +168,10 @@ com<!DOCTYPE html>
             <!-- Section Heading -->
             <div class="section-heading white">
                 <div class="line"></div>
-                <p>Bold desing and beyound</p>
-                <h2>Some Milestones</h2>
+                <p>Our heroid and significant</p>
+                <h2>Milestones</h2>
             </div>
-            <h6 class="mb-0">Morbi ut dapibus dui. Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Duis non volutpat arcu, eu mollis tellus. Sed finibus aliquam neque sit amet sod ales. Maecenas sed magna tempor, efficitur maur is in, sollicitudin augue.</h6>
+            <h6 class="mb-0">Star Spark team is one of the leading finance company with expertise providing 20 years of insurance, investment to lending experience that caters to all sorts of financial instruments for our customers. We provide a host of different and effective financial schemes that benefit the consumers in a lot of ways. They operate effectively with the sole motivation of simplifying our customers need and the process is absolutely safe, secure and swift. </h6>
 
             <div class="d-flex flex-wrap align-items-center justify-content-between">
                 <!-- Single Cool Facts -->
@@ -180,7 +180,7 @@ com<!DOCTYPE html>
                         <i class="icon-piggy-bank"></i>
                     </div>
                     <div class="scf-text">
-                        <h2><span class="counter">8710</span></h2>
+                        <h2><span class="counter">2100</span></h2>
                         <p>Clients</p>
                     </div>
                 </div>
@@ -190,8 +190,8 @@ com<!DOCTYPE html>
                         <i class="icon-coin"></i>
                     </div>
                     <div class="scf-text">
-                        <h2><span class="counter">35</span></h2>
-                        <p>Creditors</p>
+                        <h2><span class="counter">800</span></h2>
+                        <p>Investment</p>
                     </div>
                 </div>
                 <!-- Single Cool Facts -->
@@ -200,8 +200,8 @@ com<!DOCTYPE html>
                         <i class="icon-diamond"></i>
                     </div>
                     <div class="scf-text">
-                        <h2><span class="counter">12</span></h2>
-                        <p>awards</p>
+                        <h2><span class="counter">1200</span></h2>
+                        <p>Loans Disbursals</p>
                     </div>
                 </div>
             </div>
@@ -219,11 +219,11 @@ com<!DOCTYPE html>
                     <!-- Cta Content -->
                     <div class="cta-content d-flex flex-wrap align-items-center justify-content-between">
                         <div class="cta-text">
-                            <h4>Are you in need for a load? Get in touch with us.</h4>
-                            <p>Morbi ut dapibus dui. Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem.</p>
+                            <h4>Are you in need of any financial planning? Get in touch with us.</h4>
+                            <p>One of our financial expert will advise you to make the right decision.</p>
                         </div>
                         <div class="cta-btn">
-                            <a href="#" class="btn credit-btn box-shadow">Read More</a>
+                            <a href="contact.html" class="btn credit-btn box-shadow">Contact Now</a>
                         </div>
                     </div>
                 </div>
@@ -329,94 +329,7 @@ com<!DOCTYPE html>
     </section>
     <!-- ##### Services Area End ###### -->
 
-    <!-- ##### Team Member Area Start ##### -->
-    <section class="team-area section-padding-100-0">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <!-- Section Heading -->
-                    <div class="section-heading text-center mb-100">
-                        <div class="line"></div>
-                        <p>Take look at our</p>
-                        <h2>Our team</h2>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-
-                <!-- Single Team Member Area -->
-                <div class="col-12 col-sm-6 col-lg-3">
-                    <div class="single-team-member-area mb-100">
-                        <div class="team-thumb">
-                            <img src="img/bg-img/15.jpg" alt="">
-                            <!-- View More -->
-                            <div class="view-more">
-                                <a href="#">+</a>
-                            </div>
-                        </div>
-                        <div class="team-info">
-                            <h5>Janet Smith</h5>
-                            <h6>Loan Manager</h6>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Team Member Area -->
-                <div class="col-12 col-sm-6 col-lg-3">
-                    <div class="single-team-member-area mb-100">
-                        <div class="team-thumb">
-                            <img src="img/bg-img/16.jpg" alt="">
-                            <!-- View More -->
-                            <div class="view-more">
-                                <a href="#">+</a>
-                            </div>
-                        </div>
-                        <div class="team-info">
-                            <h5>Michael Smith</h5>
-                            <h6>Loan Manager</h6>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Team Member Area -->
-                <div class="col-12 col-sm-6 col-lg-3">
-                    <div class="single-team-member-area mb-100">
-                        <div class="team-thumb">
-                            <img src="img/bg-img/17.jpg" alt="">
-                            <!-- View More -->
-                            <div class="view-more">
-                                <a href="#">+</a>
-                            </div>
-                        </div>
-                        <div class="team-info">
-                            <h5>Jessica Williams</h5>
-                            <h6>Loan Manager</h6>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Team Member Area -->
-                <div class="col-12 col-sm-6 col-lg-3">
-                    <div class="single-team-member-area mb-100">
-                        <div class="team-thumb">
-                            <img src="img/bg-img/18.jpg" alt="">
-                            <!-- View More -->
-                            <div class="view-more">
-                                <a href="#">+</a>
-                            </div>
-                        </div>
-                        <div class="team-info">
-                            <h5>James Smith</h5>
-                            <h6>Loan Manager</h6>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-    <!-- ##### Team Member Area End ##### -->
+    
 
     <!-- ##### Newsletter Area Start ###### -->
     <section class="newsletter-area section-padding-100 bg-img jarallax" style="background-image: url(img/bg-img/6.jpg);">
